<resources>
    <string name="app_name">Andoroid_DSA</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button">Button</string>
    <string name="register">Register</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="list_objects">List Objects</string>
    <string name="hello">Hello</string>
    <string name="your_profile">Your profile</string>
    <string name="updating_title">update_title</string>
    <string name="updating_username">updating_username</string>
    <string name="updating_surname">updating_surname</string>
    <string name="updating_birthday">updating_birthday</string>
    <string name="updating_email">updating_email</string>
    <string name="updating_password">updating_password</string>
    <string name="updating_identifier">updating_identifier</string>
    <string name="updating_description">updating_description</string>
    <string name="updating_cost">updating_cost</string>
    <string name="updating_title_gadget">updating_title_gadget</string>
    <string name="updating_coins">updating_coins</string>
    <string name="updating_title_user">updating_title_user</string>
    <string name="ranking_users">Ranking</string>
    <string name="player">Player:</string>
    <string name="coins">Coins:</string>
    <string name="experience">Experience:</string>
    <string name="chat">CHAT</string>
    <string name="refresh">REFRESH</string>
    <string name="player_plain">Player</string>
    <string name="message">Message</string>
    <string name="write_message">Write message...</string>
    <string name="send">SEND</string>
    <string name="hi_there">Hi there, </string>
    <string name="access_profile">Access to your profile!</string>
    <string name="gadget">Gadget Shop</string>
    <string name="buy_gadgets">Buy some gadgets!</string>
    <string name="start_playing">START PLAYING</string>
    <string name="save_witcher">Can you save the witcher?</string>
    <string name="player_ranking">See the players\' Ranking</string>
    <string name="chat_forum">Chat forum</string>
    <string name="talk_to_friends">Talk to your friends</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username">Username</string>
    <string name="surname">Surname</string>
    <string name="birthday">Birthday</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="apply_changes">APPLY CHANGES</string>
    <string name="current_settings">Current Settings</string>
    <string name="gadget_shop">GADGET SHOP</string>
    <string name="dont_have_account">You don\'t have an account?</string>
    <string name="purchase_of">Purchase of</string>
    <string name="identifier">Identifier:</string>
    <string name="description">Description:</string>
    <string name="cost">Cost:</string>
    <string name="are_you_sure">Are you sure you want to buy the gadget?</string>
    <string name="buy">BUY</string>
    <string name="ranking">RANKING</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome,</string>
    <string name="your_bought_gadgets">Your bought gadgets:</string>
    <string name="edit">EDIT</string>
    <string name="gadgets">GADGETS</string>

</resources>