<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_back_dif">

    <Button
        android:id="@+id/openGadgetsUser2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:fontFamily="@font/play_regular"
        android:onClick="applyChanges"
        android:text="@string/apply_changes"
        android:textColor="@color/green_vibrant"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/usernameInput"
        android:layout_width="309dp"
        android:layout_height="40dp"
        android:hint="@string/username"
        android:textColor="@color/pastelGreen"
        android:textColorHint="@color/pastelGreen"
        app:layout_constraintBottom_toTopOf="@+id/surnameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/surnameInput"
        android:layout_width="309dp"
        android:layout_height="40dp"
        android:hint="@string/surname"
        android:textColor="@color/pastelGreen"
        android:textColorHint="@color/pastelGreen"
        app:layout_constraintBottom_toTopOf="@+id/birthdayInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/birthdayInput"
        android:layout_width="309dp"
        android:layout_height="40dp"
        android:hint="@string/birthday"
        android:textColor="@color/pastelGreen"
        android:textColorHint="@color/pastelGreen"
        app:layout_constraintBottom_toTopOf="@+id/emailInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surnameInput" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailInput"
        android:layout_width="309dp"
        android:layout_height="40dp"
        android:hint="@string/email"
        android:textColor="@color/pastelGreen"
        android:textColorHint="@color/pastelGreen"
        app:layout_constraintBottom_toTopOf="@+id/passwordInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdayInput" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordInput"
        android:layout_width="309dp"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:textColor="@color/pastelGreen"
        android:textColorHint="@color/pastelGreen"
        app:layout_constraintBottom_toTopOf="@+id/openGadgetsUser2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <TextView
        android:id="@+id/textOpeningGadgets5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_regular"
        android:lines="1"
        android:text="@string/birthday"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textOpeningGadgets4"
        app:layout_constraintTop_toTopOf="@+id/editBirthdayTxt"></TextView>

    <TextView
        android:id="@+id/textOpeningGadgets4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_regular"
        android:lines="1"
        android:text="@string/surname"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textOpeningGadgets3"
        app:layout_constraintTop_toTopOf="@+id/editSurnameTxt"></TextView>

    <TextView
        android:id="@+id/editSurnameTxt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_regular"
        android:lines="1"
        android:text="Txt"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editBirthdayTxt"
        app:layout_constraintStart_toStartOf="@+id/editUsernameTxt"
        app:layout_constraintTop_toBottomOf="@+id/editUsernameTxt"></TextView>

    <TextView
        android:id="@+id/editBirthdayTxt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_regular"
        android:lines="1"
        android:text="Txt"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editEmailTxt"
        app:layout_constraintStart_toStartOf="@+id/editSurnameTxt"
        app:layout_constraintTop_toBottomOf="@+id/editSurnameTxt"></TextView>

    <TextView
        android:id="@+id/editPasswordTxt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_regular"
        android:lines="1"
        android:text="Txt"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editEmailTxt"
        app:layout_constraintTop_toBottomOf="@+id/editEmailTxt"></TextView>

    <TextView
        android:id="@+id/editEmailTxt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_regular"
        android:lines="1"
        android:text="Txt"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editPasswordTxt"
        app:layout_constraintStart_toStartOf="@+id/editBirthdayTxt"
        app:layout_constraintTop_toBottomOf="@+id/editBirthdayTxt"></TextView>

    <TextView
        android:id="@+id/textOpeningGadgets6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_regular"
        android:lines="1"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textOpeningGadgets5"
        app:layout_constraintTop_toTopOf="@+id/editEmailTxt"></TextView>

    <TextView
        android:id="@+id/textOpeningGadgets7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_regular"
        android:lines="1"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textOpeningGadgets6"
        app:layout_constraintTop_toTopOf="@+id/editPasswordTxt"></TextView>

    <TextView
        android:id="@+id/textOpeningGadgets3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_regular"
        android:lines="1"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/passwordInput"
        app:layout_constraintTop_toTopOf="@+id/editUsernameTxt"></TextView>

    <TextView
        android:id="@+id/editUsernameTxt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_regular"
        android:lines="1"
        android:text="Txt"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editSurnameTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textOpeningGadgets3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"></TextView>

    <Button
        android:id="@+id/returnBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:fontFamily="@font/play_regular"
        android:onClick="Return"
        android:text="←"
        android:textColor="@color/green_vibrant"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_bold"
        android:text="@string/edit_profile"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/usernameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/returnBtn2"></TextView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_bold"
        android:text="@string/current_settings"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editUsernameTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openGadgetsUser2"></TextView>
</androidx.constraintlayout.widget.ConstraintLayout>