<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:backgroundTint="@color/pastelGreen"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgUser"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/usernameRnk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/moon_dance"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/idGadget2"
            app:layout_constraintStart_toEndOf="@+id/idGadget2" />

        <TextView
            android:id="@+id/idGadget2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/moon_dance"
            android:text="@string/player"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imgUser"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/idGadget3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/moon_dance"
            android:text="@string/coins"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/idGadget2"
            app:layout_constraintTop_toBottomOf="@+id/idGadget2" />

        <TextView
            android:id="@+id/idGadget4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/moon_dance"
            android:text="@string/experience"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/idGadget2"
            app:layout_constraintTop_toBottomOf="@+id/idGadget3" />

        <TextView
            android:id="@+id/coinsRnk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/moon_dance"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"

            app:layout_constraintBottom_toBottomOf="@+id/idGadget3"
            app:layout_constraintStart_toStartOf="@+id/usernameRnk" />

        <TextView
            android:id="@+id/experienceRnk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/moon_dance"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/idGadget4"
            app:layout_constraintStart_toStartOf="@+id/usernameRnk" />

        <View
            android:id="@+id/linea"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#ffd5d5d5"
            app:layout_constraintBottom_toTopOf="@+id/rankingPosition"
            app:layout_constraintLeft_toRightOf="@+id/imgUser" />

        <ImageView
            android:id="@+id/rankingPosition"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@color/white"
            android:src="@drawable/first"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>